fix layout bug

--- a/src/styles/components/members.scss
+++ b/src/styles/components/members.scss
@@ -38,7 +38,7 @@
         display: none;
 
         @media (max-width: 750px) {
-            display: block;
+            display: flex;
         }
     }
 
